<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondo4"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/txtmejor2"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="436dp"
        android:background="@drawable/estilo_borde"
        android:fontFamily="@font/coming_soon"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtultimo2"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="400dp"
        android:background="@drawable/estilo_borde"
        android:fontFamily="@font/coming_soon"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtmenor2"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="472dp"
        android:background="@drawable/estilo_borde"
        android:fontFamily="@font/coming_soon"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="173dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="436dp"
        android:background="@drawable/estilo_borde"
        android:fontFamily="@font/coming_soon"
        android:text="@string/txtprogreso2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="173dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="472dp"
        android:background="@drawable/estilo_borde"
        android:fontFamily="@font/coming_soon"
        android:text="@string/txtprogreso3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="173dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="400dp"
        android:background="@drawable/estilo_borde"
        android:fontFamily="@font/coming_soon"
        android:text="@string/txtprogreso1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextView11"
        android:layout_width="173dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="196dp"
        android:background="@drawable/estilo_borde"
        android:fontFamily="@font/coming_soon"
        android:text="@string/txtprogreso1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="173dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="232dp"
        android:background="@drawable/estilo_borde"
        android:fontFamily="@font/coming_soon"
        android:text="@string/txtprogreso2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtmenor1"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="268dp"
        android:background="@drawable/estilo_borde"
        android:fontFamily="@font/coming_soon"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtmejor1"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="232dp"
        android:background="@drawable/estilo_borde"
        android:fontFamily="@font/coming_soon"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="173dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="268dp"
        android:background="@drawable/estilo_borde"
        android:fontFamily="@font/coming_soon"
        android:text="@string/txtprogreso3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtultimo1"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="196dp"
        android:background="@drawable/estilo_borde"
        android:fontFamily="@font/coming_soon"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtnombre_unidad2"
        android:layout_width="347dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="340dp"
        android:fontFamily="@font/coming_soon"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtnombre_unidad"
        android:layout_width="348dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="144dp"
        android:fontFamily="@font/coming_soon"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtitulo_progreso"
        android:layout_width="193dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/coming_soon"
        android:text="Progreso \n General"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginTop="12dp"
        android:contentDescription="TODO"
        android:src="@drawable/icono_progreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FAF4D7" />

    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="43dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnpagina1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/txtmenu1"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:iconPadding="4dp"
            app:iconTint="#3452EA" />

        <Button
            android:id="@+id/btnpagina2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/txtmenu2"
            android:textColor="@color/black"
            android:textSize="15sp"

            app:iconPadding="4dp"
            app:iconTint="#3452EA" />

        <Button
            android:id="@+id/btnpagina3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/txtmenu3"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:iconPadding="4dp"
            app:iconTint="#3452EA" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>